charts/demo-repository/main/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: fordong-domain
  name: deployment-fordong-domain
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@every 10m"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-fordong-domain
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-fordong-domain
    spec:
      containers:
        - image: 122518608090.dkr.ecr.ap-northeast-2.amazonaws.com/demo-repository:main_d2498b
          imagePullPolicy: Always
          name: app-fordong-domain
          resources:
            limits:
              cpu: 1
              memory: 1024Mi
            requests:
              cpu: 1
              memory: 1024Mi
          ports:
            - containerPort: 8080
